Use docker/setup-compose-action for better compatibility

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,16 +83,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
+      - name: Set up Docker Compose
+        uses: docker/setup-compose-action@v3
       
       - name: Build and test with docker-compose
         run: |
-          docker-compose build
-          docker-compose up -d
+          docker compose build
+          docker compose up -d
           sleep 10
           curl -f http://localhost:5001/health || exit 1
-          docker-compose down
+          docker compose down
 
