--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,11 +83,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Set up Docker Compose
-        uses: docker/setup-compose-action@v2
-      
       - name: Build and test with docker-compose
         run: |
+          docker compose version
           docker compose build
           docker compose up -d
           sleep 10
